# odoo-yaml-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/: usage.md
src/odoo_yaml_test/: __init__.py  case.py  evaluator.py  exceptions.py  loader.py
tests/: conftest.py  test_case_smoke.py  test_evaluator.py  test_loader.py
tests/fixtures/: invalid_missing_action.yaml  valid_basic.yaml  valid_with_eval.yaml
