[metadata]
name = odoo-yaml-test
version = 0.1.0
description = Data-driven unit testing framework for Odoo using YAML scenarios.
author = Andhitia Rama
author_email = andhitia.r@gmail.com
license = Apache-2.0

[options]
python_requires = >=3.6
install_requires =
    PyYAML>=5.4
    python-dateutil>=2.8
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
